--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   },
   "main": "xlsx.js",
   "dependencies": {
-    "node-zip": "1.1.0"
+    "jszip": "2.5.0"
   },  
   "devDependencies": {
-    "mocha": "1.8.2",
-    "chai": "1.5.0",
-    "fs-extra": "0.5.0"
+    "mocha": "2.4.5",
+    "chai": "3.5.0",
+    "fs-extra": "0.26.7"
   },
   "license": "Microsoft Office Extensible File License",
   "scripts": {
